# blah-ssphh-all

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  desktop.ini  fluxions-ssphh-research-block-diagram.drawio  ssphh-all.code-workspace  ssphh-all.sln  ssphh2019.sln
ssphh/: .gitignore  CMakeLists.txt  Makefile  README.md  animation.txt  animation2.txt  pbsky_cubemap.ppm  pbsky_cubemap_0.ppm  pbsky_cubemap_1.ppm  pbsky_cubemap_2.ppm  pbsky_cubemap_3.ppm  pbsky_cubemap_4.ppm  pbsky_cubemap_5.ppm  ssphh.vcxproj  ssphh.vcxproj.filters
ssphh/corona_output/: corona_ground_truth.exr  corona_ground_truth1.exr  ssphh_sky.exr
ssphh/include/: SphlJob.hpp  camera_animation.hpp  help_window.hpp  renderer_config_window.hpp  renderer_window.hpp  scene_editor_window.hpp  scene_graph_window.hpp  ssphh_menu.hpp  ssphh_ppmcompare.hpp  ssphh_unicornfish.hpp  ssphh_window.hpp  ssphhapp.hpp  ssphhapp_renderconfigs.hpp  tool_window.hpp  unicornfish_window.hpp
ssphh/models/: adj0.txt  adj1.txt  adj4.txt  adj5.txt  icos.txt  icos0.txt  icos1.txt  icos5.txt  icos6.txt  lores.txt
ssphh/output/: test_terrain_scene_sphl0_sph_ch0_R.mtl  test_terrain_scene_sphl0_sph_ch1_G.mtl  test_terrain_scene_sphl0_sph_ch2_B.mtl  test_terrain_scene_sphl0_sph_ch3_I.mtl  test_terrain_scene_sphl0_sph_ch4_Y.mtl  test_terrain_scene_sphl1_sph_ch0_R.mtl  test_terrain_scene_sphl1_sph_ch1_G.mtl  test_terrain_scene_sphl1_sph_ch2_B.mtl  test_terrain_scene_sphl1_sph_ch3_I.mtl  test_terrain_scene_sphl1_sph_ch4_Y.mtl  test_terrain_scene_sphl2_sph_ch0_R.mtl  test_terrain_scene_sphl2_sph_ch1_G.mtl  test_terrain_scene_sphl2_sph_ch2_B.mtl  test_terrain_scene_sphl2_sph_ch3_I.mtl  test_terrain_scene_sphl2_sph_ch4_Y.mtl  test_terrain_scene_sphl3_sph_ch0_R.mtl  test_terrain_scene_sphl3_sph_ch1_G.mtl  test_terrain_scene_sphl3_sph_ch2_B.mtl  test_terrain_scene_sphl3_sph_ch3_I.mtl  test_terrain_scene_sphl3_sph_ch4_Y.mtl
ssphh/resources/aurora/: LICENSE.txt
ssphh/resources/config/: pb_monolithic_2020.renderconfig
ssphh/resources/models/: adj2.txt  adj3.txt  adj6.txt  icos2.txt  icos4.txt  moon.mtl
ssphh/resources/shaders/: basic_gles.frag  basic_gles30.frag  basic_gles30.vert  default_slow_es30.frag  default_slow_es30.vert  gles30.frag  gles30.vert  postprocess.frag  postprocess.vert  rect_shadow.frag  rect_shadow.vert  skybox.frag  skybox.vert  sphl300.vert  sphl_cubemap.frag  webgl_unwrapped_cubemap.frag  webgl_unwrapped_cubemap.vert
ssphh/resources/textures/: .gitattributes  mwpan2_RGB_1536.pfm  mwpan2_RGB_3600.pfm  mwpan2_cubemap.exr  mwpan2_cubemap.pfm  test_61_cube.pyxel  test_corona_cube.exr  test_corona_skymap.exr  test_cross_cube.pyxel  test_hcross_cube.pyxel  (+1 more)
ssphh/src/: AuroraVisualization.cpp  DragDrop.cpp  GLFW_template.cpp  PbskyViewController.cpp  SphlJob.cpp  camera_animation.cpp  help_window.cpp  main.cpp  pch.hpp  renderer_config_window.cpp  renderer_window.cpp  scene_editor_window.cpp  scene_graph_window.cpp  sphhapp_ssphh.cpp  ssphh_corona.cpp  ssphh_imgui.cpp  ssphh_imgui_tests.cpp  ssphh_menu.cpp  ssphh_ppmcompare.cpp  ssphh_tests.cpp  ssphh_uf.cpp  ssphh_uf_client.cpp  ssphh_uf_imgui.cpp  ssphh_uf_worker.cpp  ssphh_window.cpp  ssphhapp.cpp  ssphhapp_pathanim.cpp  ssphhapp_pbsky.cpp  ssphhapp_render.cpp  ssphhapp_render_gl11.cpp  ssphhapp_render_gles30.cpp  ssphhapp_render_shadows.cpp  ssphhapp_renderconfigs.cpp  ssphhapp_scenegraph.cpp  ssphhapp_unicornfish.cpp  ssphhapp_update.cpp  ssphhapp_usercontrols.cpp  tests.cpp  tool_window.cpp  unicornfish_window.cpp
(+78 files in other folders)
